fixing contrast

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #222222!important;
+    color: #161616!important;
 }
 
 .container {
